--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cookie": "^1.1.1",
+    "date-fns": "^4.1.0",
     "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.561.0",
     "next": "16.0.10",
@@ -31,7 +32,9 @@
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "react-hook-form": "^7.68.0",
+    "react-toastify": "^11.0.5",
     "recharts": "^3.6.0",
+    "socket.io-client": "^4.8.3",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.2.1"
