--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "parse": "^8.0.0",
     "react": "19.2.1",
     "react-dom": "19.2.1",
+    "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.68.0",
     "react-toastify": "^11.0.5",
     "recharts": "^3.6.0",
